@@ -701,6 +701,10 @@ CONTROL_STATEMENT_STATE>{
   "NO-FOLD-COPY-NAME"	{
 	return NOFOLDCOPYNAME;
   }
+  "NOODOSLIDE"	|
+  "NO-ODOSLIDE"	{
+	return NOODOSLIDE;
+  }
   "NOSSRANGE"	|
   "NO-SSRANGE"	{
 	return NOSSRANGE;
@@ -708,6 +712,9 @@ CONTROL_STATEMENT_STATE>{
   "NOSPZERO"	|
   "NO-SPZERO"	{
 	return NOSPZERO;
+  }
+  "ODOSLIDE"	{
+	return ODOSLIDE;
   }
   "OVERRIDE"	{
 	return OVERRIDE;
